rust/tests/errors/nested_interactive.hyper
<a href="/home">
    <button>Click me</button>
</a>
